# guard

./: .actrc  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Brewfile  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  compatibility-matrix.yaml  install.sh  uninstall.sh
crates/guard-bench/: Cargo.toml
crates/guard-bench/benches/: cache_hit_hot_path.rs  hot_path.rs
crates/guard-cli/: Cargo.toml
crates/guard-cli/src/: audit_token.rs  banner.rs  biometric.rs  cli.rs  denial_log.rs  ensure_daemon.rs  hardware_signing.rs  ipc_client.rs  lib.rs  locate.rs  logs.rs  main.rs  persistence_log.rs  pq_signing.rs  prompt_channel.rs  prompt_render.rs  rule_signing.rs  run_orchestrator.rs  sigint_handler.rs  spawn.rs  tty.rs
crates/guard-cli/tests/: cli_args_tests.rs  denial_log_filter.rs  rule_signing.rs  sigint_handler_unit.rs  spawn_daemon_socket_envp_tests.rs  spawn_envp_tests.rs  status_minimal_default.rs  status_phase07_modules.rs  status_verbose_json.rs
crates/guard-compat/: Cargo.toml
crates/guard-compat/src/: main.rs
crates/guard-core/: Cargo.toml  build.rs
crates/guard-core/data/: malicious-ossf-packages.yaml  trusted-registry-crates-io.yaml  trusted-registry-golang.yaml  trusted-registry-hex.yaml  trusted-registry-maven.yaml  trusted-registry-rubygems.yaml  trusted-runtimes.yaml
crates/guard-core/src/: allowlist.rs  env_filter.rs  error.rs  identity.rs  lib.rs  lockfile.rs  paths.rs  policy.rs  rule_signature.rs  snapshot.rs  snapshot_build.rs  trusted_signers.rs
crates/guard-core/tests/: allowlist_v2_tests.rs  identity_tests.rs  policy_evaluator_tests.rs  rule_signature_tests.rs  snapshot_v2_tests.rs
crates/guard-daemon/: Cargo.toml  build.rs
crates/guard-daemon/migrations/: 001_schema.sql  002_curated_overrides.sql  003_rule_signatures.sql
crates/guard-daemon/src/: baseline_staging.rs  codesign.rs  curated.rs  daemon_state.rs  env_capture.rs  gap_detector.rs  hmac_key.rs  install_artifacts.rs  ipc_dispatch.rs  ipc_server.rs  lib.rs  main.rs  management_auth.rs  manifest.rs  os_ffi.rs  peer_auth.rs  persistence_watcher.rs  rule_store.rs  snapshot.rs  snapshot_gc.rs  state_dir.rs  tracked.rs
crates/guard-daemon/tests/: baseline_staging_tests.rs  codesign_os_tests.rs  curated_yaml_tests.rs  deferred_resolve_table.rs  deny_notify_round_trip.rs  env_capture_allowlist.rs  env_not_propagated_tests.rs  exec_event_pm_env_capture.rs  gap_detector_tests.rs  insert_user_rule_handler.rs  install_artifacts_crud.rs  ipc_server_new_tags.rs  ipc_server_tests.rs  log_writer_atomic_rename.rs  log_writer_gzip_retention.rs  log_writer_size_rotation.rs  os_ffi_tests.rs  package_context_inference.rs  prepare_snapshot_tests.rs  process_tree_extensions.rs  process_tree_tests.rs  prompt_channel_long_lived.rs  prompt_channel_long_lived_spike.rs  prompt_dedup_window.rs  prompt_suggested_rules.rs  read_install_artifacts_handler.rs  recent_gaps_ring.rs  resolve_tests.rs  rule_store_tests.rs  snapshot_publish_tests.rs  status_handler_states.rs
crates/guard-e2e/: Cargo.toml
crates/guard-e2e/harness/: connect_allowed.js  connect_evil.js  connect_workers_dev.js  double_fork_setsid.sh  double_fork_setsid.ts  getaddrinfo_probe.js  prompt_probe.js  smoke_node.js  zero_config_probe.rs
crates/guard-e2e/src/: lib.rs
crates/guard-e2e/tests/: ambient_unaffected.rs  bench_hot_path_e2e.rs  bench_open_hook_overhead.rs  bench_regression.rs  concurrent_prompt_channels_cap_rejection.rs  concurrent_prompt_channels_load.rs  curated_deny.rs  curated_override_e2e.rs  deny.rs  env_not_propagated.rs  expanded_hooks_deny.rs  failure_modes_corrupt_snapshot.rs  failure_modes_daemon_killed.rs  failure_modes_hardened_exec.rs  getaddrinfo_e2e.rs  hardened_exec_block.rs  hardened_install_health.rs  learn_mode_curated_deny.rs  learn_mode_default_deny_passthrough.rs  learn_mode_non_tty_rejects.rs  learn_mode_review.rs  libc_allowlisted_hostname.rs  linux_system_install_gate.rs  log_writer_pm_env_denylist_e2e.rs  m003_cross_slice.rs  m004_resilience.rs  m006_hardening.rs  non_tty_deny_with_log.rs  per_run_snapshot_gc.rs  persistence_write_detect.rs  pm_env_capture_in_exec_event.rs  precedence.rs  prompt_cancel_via_sigint.rs  prompt_dedup_5s_window.rs  prompt_deny_returns_nonzero_exit.rs  prompt_unblock_allow_always_machine.rs  prompt_unblock_allow_once.rs  prompt_unblock_deny.rs  reparenting.rs  smoke.rs  (+8 more)
crates/guard-hook/: Cargo.toml  build.rs
crates/guard-hook/benches/: cache_hit_hot_path.rs  hot_path.rs
crates/guard-hook/src/: cache.rs  env_scrub.rs  envp.rs  exec_policy.rs  fd_class.rs  interpose.rs  ipc_client.rs  lib.rs  log_buffer.rs  macho_flags.rs  macho_scan.rs  persistence_paths.rs  pm_env_filter.rs  raw_syscall.rs  reentrancy.rs  replace_exec.rs  replace_fork.rs  replace_libc.rs  replace_nw.rs  replace_open.rs  self_check.rs  snapshot.rs  trusted_runtime.rs
crates/guard-hook/tests/: cache_tests.rs  daemon_dead_socket_returns_io_error.rs  dylib_section_tests.rs  env_not_propagated_client_tests.rs  envp_inspector_tests.rs  exec_path_buffer_tests.rs  getaddrinfo_proxy_tests.rs  linux_ld_preload_smoke.rs  local_transport_policy_tests.rs  log_buffer_tests.rs  nw_dlsym_tests.rs  nw_object_detection_tests.rs  resolve_client_tests.rs  snapshot_loader_tests.rs
crates/guard-ipc/: Cargo.toml
crates/guard-ipc/src/: error.rs  frame.rs  lib.rs  messages.rs  signed_frame.rs  transport.rs
crates/guard-ipc/tests/: frame_tests.rs  prompt_messages_round_trip.rs  schema_v3_backward_compat.rs  transport_tests.rs  v2_messages_roundtrip.rs
crates/guard-os/: Cargo.toml
crates/guard-os/src/: audit_token.rs  codesign.rs  errno.rs  error.rs  fs_watch.rs  lib.rs  peer.rs  process.rs  system.rs
crates/guard-watchdog/: Cargo.toml
crates/sentinel-cli/: Cargo.toml
crates/sentinel-core/: Cargo.toml
crates/sentinel-daemon/: Cargo.toml  build.rs
crates/sentinel-e2e/: Cargo.toml
crates/sentinel-hook/: Cargo.toml  build.rs
crates/sentinel-ipc/: Cargo.toml
crates/sentinel-watchdog/: Cargo.toml
(+480 files in other folders)
