[workspace]
resolver = "3"
members = [
  "crates/sentinel-cli",
  "crates/sentinel-daemon",
  "crates/sentinel-hook",
  "crates/sentinel-core",
  "crates/sentinel-ipc",
  "crates/sentinel-e2e",
  "crates/sentinel-e2e/harness/env_clear_posix_spawn",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sentinel-app/sentinel"
authors = ["Sentinel contributors"]

[workspace.dependencies]
# Core (production runtime)
libc = "0.2.186"
ciborium = "0.2.2"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11"
serde_yml = "0.0.12"
nix = { version = "0.31.2", default-features = false, features = ["process", "socket", "user", "signal"] }
signal-hook = "0.3"
clap = { version = "4.6.1", features = ["derive"] }
memmap2 = "0.9.10"
socket2 = { version = "0.5", features = ["all"] }
thiserror = "2.0.18"
toml = "1.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
plist = "1.9.0"
ctor = "1.0.1"
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2.5"
uuid = { version = "1", features = ["v4"] }
dialoguer = "0.12"
toml_edit = "0.23"
notify = "8.2"
similar = "2.7"
flate2 = "1.1"
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
gix = { version = "0.83", default-features = false, features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "sha1",
    "worktree-mutation",
] }
semver = "1.0"
walkdir = "2.5"
url = "2.5"

# Internal crates
sentinel-core = { path = "crates/sentinel-core" }
sentinel-ipc  = { path = "crates/sentinel-ipc" }

# Dev / test
criterion = "0.8.2"
tempfile  = "3"
assert_cmd = "2"
predicates = "3"
sha2 = "0.10"
rand = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.dev]
# panic = "abort" for all dev builds — dylib code (libsentinel_hook.dylib) must not
# attempt to unwind through foreign (Node/libuv) C++ stack frames. An unwind panic
# inside a cdylib injected into a foreign process causes SIGSEGV. abort is safe:
# it terminates the host process immediately with a clear diagnostic instead of
# corrupting the stack. All crates share this profile setting.
panic = "abort"

# Phase 4 (D-87 / RESEARCH.md Pitfall 2): the daemon would benefit from
# panic = "unwind" so std::panic::catch_unwind can isolate gix panics. But
# cargo REJECTS panic settings in per-package profiles with the error
# "`panic` may not be specified in a `package` profile" (verified via Wave 0
# Spike A2, see 04-SPIKE-RESULTS.md). Workspace-wide panic = "abort" remains
# the only viable setting because the dylib (sentinel-hook) cannot unwind
# through foreign C++ frames.
#
# Implication for plan 02: catch_unwind is a no-op in abort mode; gix panics
# terminate the daemon. Phase 3's launchd LaunchAgent KeepAlive=true restarts
# it within seconds. feed_metadata.last_pull_outcome = 'panic' (D-87 path).
# The blocks below are KEPT as commented documentation of the rejected path.
# [profile.release.package.sentinel-daemon]
# panic = "unwind"   # REJECTED by cargo — see SPIKE-RESULTS.md Spike A2
# [profile.dev.package.sentinel-daemon]
# panic = "unwind"   # REJECTED by cargo — see SPIKE-RESULTS.md Spike A2
