[workspace]
resolver = "3"
members = [
  "crates/sentinel-cli",
  "crates/sentinel-daemon",
  "crates/sentinel-hook",
  "crates/sentinel-core",
  "crates/sentinel-ipc",
  "crates/sentinel-watchdog",
  "crates/sentinel-e2e",
  "crates/sentinel-e2e/harness/env_clear_posix_spawn",
  "crates/sentinel-e2e/harness/pm_env_posix_spawn",
  "crates/sentinel-e2e/harness/expanded_hooks_probe",
  "crates/sentinel-e2e/harness/hardened_exec_probe",
  "crates/sentinel-e2e/harness/persistence_write_probe",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stentorian-io/sentinel"
authors = ["Sentinel contributors"]

[workspace.dependencies]
# Core (production runtime)
libc = "0.2.186"
ciborium = "0.2.2"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11"
serde_yml = "0.0.12"
signal-hook = "0.3"
clap = { version = "4.6.1", features = ["derive"] }
memmap2 = "0.9.10"
socket2 = { version = "0.5", features = ["all"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctor = "1.0.1"
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2.5"
flate2 = "1.1"
serde_json = "1.0"
getrandom = "0.2"

# Internal crates
sentinel-core = { path = "crates/sentinel-core" }
sentinel-ipc  = { path = "crates/sentinel-ipc" }

# Cryptography (snapshot + IPC signing)
sha2 = "0.10"
hmac = "0.12"

# Dev / test
criterion = "0.8.2"
tempfile  = "3"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.dev]
# panic = "abort" for all dev builds — dylib code (libsentinel_hook.dylib) must not
# attempt to unwind through foreign (Node/libuv) C++ stack frames. An unwind panic
# inside a cdylib injected into a foreign process causes SIGSEGV. abort is safe:
# it terminates the host process immediately with a clear diagnostic instead of
# corrupting the stack. All crates share this profile setting.
panic = "abort"

