[package]
name = "guard-compat"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Compatibility drift tracker for Stentorian Guard."

[lints]
workspace = true

[[bin]]
name = "stt-guard-compatibility-tracker"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
