[package]
name = "guard-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Stentorian Guard domain types: ProcessIdentity, allowlist matcher, snapshot codec."

[lints]
workspace = true

[features]
test-signer = []

[dependencies]
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
sha2 = { workspace = true }
p256 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
