[package]
name = "guard-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Stentorian Guard IPC wire schemas + Unix socket transport with peer audit-token auth."

[lints]
workspace = true

[dependencies]
guard-core = { workspace = true }
guard-os = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
[package.metadata.cargo-machete]
ignored = ["serde_bytes"]
