[package]
name = "guard-os"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Stentorian Guard OS-specific primitives behind explicit capability APIs."

[lints]
workspace = true

[dependencies]
guard-core = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
