[package]
name = "sentinel-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "sentinel CLI — wraps a command under default-deny network enforcement."

[[bin]]
name = "sentinel"
path = "src/main.rs"

[lib]
name = "sentinel_cli"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
socket2 = { workspace = true }
sentinel-core = { workspace = true }
sentinel-ipc = { workspace = true }
sentinel-daemon = { path = "../sentinel-daemon" }
serde = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
dialoguer = { workspace = true }
notify = { workspace = true }
plist = { workspace = true }
similar = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
sha2 = { workspace = true }
