[package]
name = "sentinel-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sentinel domain types: ProcessIdentity, allowlist matcher, snapshot codec."

[dependencies]
libc = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
