[package]
name = "sentinel-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "sentineld — user-level LaunchAgent that publishes snapshot, accepts RegisterRoot."

[lib]
name = "sentinel_daemon"
path = "src/lib.rs"

[[bin]]
name = "sentineld"
path = "src/main.rs"

[dependencies]
sentinel-core = { workspace = true }
sentinel-ipc = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ciborium = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
uuid = { workspace = true }
flate2 = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
