[package]
name = "sentinel-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "sentineld — user-level LaunchAgent that publishes snapshot, accepts RegisterRoot."

[lib]
name = "sentinel_daemon"
path = "src/lib.rs"

[[bin]]
name = "sentineld"
path = "src/main.rs"

[features]
test-yaml = ["dep:serde_yml"]

[dependencies]
sentinel-core = { workspace = true }
sentinel-ipc = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ciborium = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
flate2 = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
serde_yml = { workspace = true, optional = true }

[build-dependencies]
serde_yml = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
sentinel-daemon = { path = ".", features = ["test-yaml"] }
