[package]
name = "sentinel-e2e"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "End-to-end smoke harness for Sentinel."

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero_config_probe"
path = "harness/zero_config_probe.rs"

[dependencies]
sentinel-core = { workspace = true }
sentinel-daemon = { path = "../sentinel-daemon" }
sentinel-ipc = { workspace = true }
libc = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
portable-pty = "0.9"
sha2 = { workspace = true }   # plan 05-05: corrupt-snapshot test computes manifest digest
socket2 = { workspace = true }  # M004-S01: watchdog ping in E2E tests
sentinel-hook = { path = "../sentinel-hook" }  # M004-S06: resilience integration tests

[features]
# Opt-in feature for tests that require a real launchd user session
# (macOS GUI session). Enable with:
#   cargo test -p sentinel-e2e --features ci-launchd
# CI workflows that run on real macOS runners can enable this; default
# `cargo test` invocations do NOT.
ci-launchd = []
