[package]
name = "sentinel-hook"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "DYLD interpose hook dylib (libsentinel_hook.dylib) for outbound network enforcement."

[lib]
crate-type = ["cdylib", "rlib"]   # rlib so integration tests can link

[dependencies]
libc = { workspace = true }
ctor = { workspace = true }
memmap2 = { workspace = true }
ciborium = { workspace = true }
crossbeam-queue = { workspace = true }
serde = { workspace = true }
sentinel-core = { workspace = true }
sentinel-ipc = { workspace = true }
socket2 = { workspace = true }
sha2 = "0.10"
hmac = { workspace = true }
# Phase 2 plan 02-05 lifts the original "no crossbeam" exclusion: crossbeam-queue
# (lock-free MPMC) is the BL-03 / D-43 fix for the racy SpscRing log buffer. The
# remaining exclusions (tokio, async-std, mio, serde_json, reqwest, tracing) still
# stand — see .planning/phases/01-foundations-hook-hello-world/01-RESEARCH.md.

[dev-dependencies]
tempfile = { workspace = true }
sentinel-daemon = { path = "../sentinel-daemon" }
criterion = { workspace = true }
hdrhistogram = "7.5.4"

[[bench]]
name = "hot_path"
harness = false

[[bench]]
name = "cache_hit_hot_path"
harness = false
