[package]
name = "sentinel-ipc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sentinel IPC wire schemas + Unix socket transport with peer audit-token auth."

[dependencies]
sentinel-core = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
