[package]
name = "sentinel-watchdog"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "sentinel-watchdog"
path = "src/main.rs"

[dependencies]
sentinel-ipc = { path = "../sentinel-ipc" }
socket2 = { workspace = true }
ciborium.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
libc.workspace = true
signal-hook.workspace = true

[dev-dependencies]
tempfile.workspace = true
